--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li>Email:<a href="kamalnayanchoubey5@gmail.com">kamalnayanchoubey5@gmail.com</a></li>
         <li>Linkedin:<a href="https://www.linkedin.com/in/kamal-nayan-choubey-928045289">https://www.linkedin.com/in/kamal-nayan-choubey-928045289</a></li>
         <li>GitHub:<a href="https://github.com/kamalnayanchoubey">https://github.com/kamalnayanchoubey</a></li>
+        <li>LeetCode: <a href="https://leetcode.com/u/kamalnayanchoubey5">https://leetcode.com/u/kamalnayanchoubey5/</a>/</li>
         <li>Phone: 9508010265</li>
     </ul><hr>
     <h2>OBJECTIVE</h2>
@@ -29,7 +30,6 @@
     <hr>
     <h2>ACHIEVEMENTS</h2>
     <p>Solved 800+ problems on Leetcode across various difficulty levels (Easy, Medium, Hard).</p>
-    <p>Ranked in top 6.9% globally in Leetcode contests</p>
     <p>Data Structures and Algorithms: Expertise in Arrays, Linked Lists, Trees, Graphs, Dynamic Programming, etc.</p>
     <p>Problem-solving skills with hands-on experience solving 800+ algorithmic challenges.</p>
 
@@ -39,29 +39,39 @@
     <p>Computer Networking</p>
     <p>Opersting systems</p>
     <P>Object oriented Programming</P>
+    <p>Basics of Remote Sensing Dehradun, GIS and GNSS (IIRS) (ISRO)</p>
     <h2>EXPERIENCE</h2>
+    <p>"Technical content writer at GeeksforGeeks website"</p>
+    <p>(Contributed articles on data structures and algorithms which are currently published at GFG website)</p>
     <p>"Optimized a search algorithm Breadth-First Search (BFS) improving efficiency by (BFS) in [ZUMAGAME]."</p>
     <a href="https://github.com/kamalnayanchoubey/Zuma-Game">Use this link</a>
     <p>"Built a platform to solve algorithmic challenges with automated grading systems using C++(DSA)."</p>
     <a href="https://github.com/kamalnayanchoubey/24-Game">Use this link</a>
 <hr>
 <h2>SKILLS</h2>
+<p>Frontend Development: HTML, CSS, JavaScript, ReactJS</p>
 <p>C, C++, Python, MySQL, JavaScript, HTML,DBMS, Git, MachineLearning, DSA,OperatingSysteams,</p>
 <hr>
   <h2>SELECTED PROJECTS</h2>
-  <p>
-    <li>HTML Css JavaScript C++ DSA</li>
-    
-    </p>
-  <a href="https://github.com/kamalnayanchoubey/Big-Integer-cpp">Use this link</a>
-  <li>Using HTML, Css ,C++ , JavaScript</li>  
+   <p>Currency Converter</p>
+   > Technologies Used: HTML, CSS, JavaScript, ReactJS
+   > Description: Developed a responsive web application that allows users to search for available
+   domain names. The application dynamically fetches domain availability data and displays
+   suggestions based on user input.
+  >Key Contributions: Integrated the currency API and ensured accurate conversions and seamless
+  user experience through TypeScript for type safety. </p>
 
-  <a href="https://github.com/kamalnayanchoubey/CurrencyConverter">Use this link</a>
-  <li>Using HTML, Css ,C++ , JavaScript</li>  
+  <p>Amazon-Clone</p>
+  <a href="https://github.com/kamalnayanchoubey">https://github.com/kamalnayanchoubey</a>
 
-  <a href="https://github.com/kamalnayanchoubey/Amazon-Clone">Use this link</a>
-  <li>Using HTML, css, JavaScript</li>  
-  <a href="https://github.com/kamalnayanchoubey/RestApi">Use this link</a>
+  <P>youtube-clone</P>
+  <a href="https://github.com/kamalnayanchoubey">https://github.com/kamalnayanchoubey</a>
+
+  <p>Zuma-Game</p>
+  <a href="https://github.com/kamalnayanchoubey">https://github.com/kamalnayanchoubey</a>
+
+  <p></p>
+
   <hr>
 
 </body>
